#5 View implemented and User List view adjusts

--- a/WellHub/Core/Strings/en.lproj/Default.strings
+++ b/WellHub/Core/Strings/en.lproj/Default.strings
@@ -1,3 +1,4 @@
 "error.title" = "Error";
 "error.message" = "There was a problem fetching the data.";
 "error.tryAgain" = "Try again";
+"last.update.format" = "MMM dd, yyyy";
